# MandelbrotSSE

./: .gitignore  CMakeLists.txt  README.md  allTests.cpp  fastest.cpp  main.cpp  placeCat.cpp  walker.cpp
src/: ColorPalette.cpp  ColorPalette.h  Complex.h  ComplexSSE.h  Graphics.h  SDLHandlers.h  mandutils.h
src/CUDA/: CUDACommon.cuh  CUDAComplex.cu  CUDAWorkers.cu  Complex.cu  Complex.cuh  cudaGraphics.h  libraryMandelbrot.cu  libraryMandelbrotCXXAPI.h
